--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "docgen:node": "node scripts/docgen/generate-docs.js --api node",
     "docgen": "yarn docgen:js; yarn docgen:node",
     "prettier": "prettier --config .prettierrc --write '**/*.{ts,js}'",
-    "lint": "lerna run --scope @firebase/* --scope rxfire lint"
+    "lint": "lerna run --scope @firebase/* --scope rxfire lint",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
